Fixed letter spacing of website font

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@
 body {
     background-color: var(--body-back);
     font-family: 'tex-regular';
+    letter-spacing: 0.03rem;
 }
 button {
     font-family: 'tex-regular';
